TAG: derivationload-6-0-18-1
DATE: 04/16/2022
STAFF: sc
CHANGES:
1) convert to postgres and python 3
   this is adhoc load that would only be converted
   when needed. We needed to create derivations
   for the curatoralleleload bulk allele load for CREAM project

TAG: derivationload-6-0-4-1
DATE: 06/16/2016
STAFF: lec 
CHANGES:
1) convert to git

TAG: derivationload-4-3-0-2
DATE: 07-06-2009
STAFF:  sc
CHANGES: TR7493
1) check for dups in the input file

TAG: derivationload-4-3-0-1
DATE: 05-11-2009
STAFF:  sc
CHANGES: TR7493
1) createDerivationInputFile.py - removed reference from the derivation name

TAG: derivationload-4-2-1-5
DATE: 04-23-2009
STAFF:  sc
CHANGES: TR7493
1) bug when resolving references fixed
2) added logging of derivations whose attributes do not resolve i.e.
   this load is no longer all or nothing

TAG: derivationload-4-2-1-4
TAG: derivationload-4-2-1-3
DATE: 04-09-2009
STAFF:  sc
CHANGES:
1) derivationload.py - updated some comments, added test for jNum-''
2) createDerivationInputFile.py and createDerivationInputFile.sh
   which create derivations from existing parent cell lines in the database

TAG: derivationload-4-2-1-2
DATE: 04-07-2009
STAFF:  sc
CHANGES: Updated to use allele type vocab for
   derivation type - TR7493

TAG: derivationload-4-2-1-1
DATE: 04-02-2009
STAFF:  sc
CHANGES: Initial commit TR7493 