@@ -1,3 +1,10 @@
+TAG: derivationload-6-0-22-1
+DATE: 08/15/2022
+STAFF: lec
+CHANGES:
+wts2-954/duplicate key value in derivation page
+use autosequence for all_cellline_derivation max key
+
 TAG: derivationload-6-0-18-1
 DATE: 04/16/2022
 STAFF: sc
